# VideoDrawSurface

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle
app/jni/: Android.mk  Application.mk  av_rotation.cpp  av_rotation.h  debug.h  main.cpp  native-lib.cpp  native-lib.h  util.cpp  util.h  video_player.cpp  video_player.h
app/jni/include/libavcodec/: vaapi.h  version.h
app/jni/include/libavfilter/: version.h
app/jni/include/libavformat/: internal.h  url.h
app/jni/include/libavutil/: application.h  dns_cache.h  hwcontext.h  version.h
app/jni/include/libffmpeg/: config.h
app/jni/include/libswscale/: version.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/cpp/include/libffmpeg/: config.h
app/src/main/java/andhook/lib/: AndHook.java  HookHelper.java  YunOSHelper.java
app/src/main/res/layout/: activity_main.xml  item_spinner.xml
app/src/main/res/values/: fixedlayout.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
libplayer/: build.gradle
libplayer/jni/: Android.mk  debug.h  main.cpp  main.h  size_info.h  util.cpp  util.h  video_player.cpp  video_player.h
libplayer/jni/include/libavcodec/: avcodec.h
libplayer/jni/include/libavfilter/: avfilter.h
libplayer/jni/include/libavformat/: avformat.h  avio.h  version.h
libplayer/jni/include/libavutil/: ffversion.h  intreadwrite.h  pixfmt.h
libplayer/jni/include/libswresample/: version.h
libplayer/src/main/: AndroidManifest.xml
(+22 files in other folders)
